# yaleman.github.io

./: .gitignore  README.md  SECURITY.md  biome.json  generate.py  index.html  justfile  pyproject.toml  style.css
.github/: CONTRIBUTING.md
.github/workflows/: mypy.yml  publish-site.yml  pytest.yml
site/: index.html  search.js  style.css
tests/: conftest.py  test_generate.py
